# SH-tty

./: .gitignore  Cargo.toml  LICENSE  README.md  build-packages.sh  install.sh
config/: default.toml
debian/: control  postinst  prerm
packaging/arch/: PKGBUILD  superhot-tty.install
packaging/rpm/: superhot-tty.spec
skel/: zshrc.example
src/: main.rs
src/audio/: mod.rs
src/config/: mod.rs  watcher.rs  window_rules.rs
src/drm/: cursor.rs  fbdev.rs  kms.rs  mod.rs  multi_monitor.rs  planes.rs
src/input/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs
src/ipc/: mod.rs
src/launcher/: mod.rs
src/layout/: mod.rs  workspaces.rs
src/login/: mod.rs  privsep.rs
src/portal/: mod.rs
src/render/: canvas.rs  font.rs  glitch.rs  mod.rs  text.rs
src/term/: libvterm.rs  mod.rs  pty.rs  vterm.rs
src/ui/: mod.rs  popup.rs  theme.rs
src/x11/: compositor.rs  dmabuf.rs  dri3.rs  mod.rs
systemd/: superhot-tty@.service
